add component repository don't work at fix