@@ -1,36 +1,41 @@
 package fr.sfc.api.persistence;
 
-import fr.sfc.model.repository.Repository;
 import org.reflections.Reflections;
+import org.reflections.scanners.Scanners;
 import org.reflections.util.ConfigurationBuilder;
 
-import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
+
 public final class RepositoryFactory {
 
-    private Map<Class<? extends Repository<?>>, Repository<?>> repositories;
-    private Set<Repository<?>> setRepositories;
+    private final Map<Class<? extends Repository<?>>, Repository<?>> repositories;
+    private final Set<Repository<?>> setRepositories;
 
     public RepositoryFactory() {
         repositories = new HashMap<>();
         setRepositories = new HashSet<>();
     }
+
     public void detectRepositories(String packageRepository) {
         try {
-            final Reflections reflections = new Reflections(packageRepository);
-            for (var permittedSubclass : reflections.getSubTypesOf(Repository.class)) {
-                if (!repositories.containsKey(permittedSubclass)) {
-                    repositories.put(
-                            (Class<? extends Repository<?>>) permittedSubclass,
-                            (Repository<?>) permittedSubclass.getConstructors()[0].newInstance()
-                    );
+            final Reflections reflections = new Reflections(packageRepository, Scanners.values());
+            System.out.println(Arrays.toString(reflections.getConfiguration().getUrls().toArray()));
+
+            for (final var subClasses : reflections.getSubTypesOf(Repository.class)) {
+
+                if (!repositories.containsKey(subClasses)) {
+                    repositories.put((Class<? extends Repository<?>>) subClasses,
+                            subClasses.getConstructor().newInstance());
                 }
             }
             repositories.forEach((aClass, repository) -> setRepositories.add(repository));
+
         } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
-        e.printStackTrace();
+            e.printStackTrace();
+        } catch (NoSuchMethodException e) {
+            throw new RuntimeException("We need an empty constructor", e);
         }
 
     }
